<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="prompt_weight">Weight (kg)</string>
    <string name="prompt_height">Heigth (m)</string>
    <string name="btn_Calc">Calculate</string>
    <string name="btn_Reset">Reset</string>
    <string name="bmi">BMI : </string>
    <string name="status">Status : </string>
    <string name="normal">Normal</string>
    <string name="underweight">Underweight</string>
    <string name="overweight">Overweight</string>


</resources>
